--- a/package.json
+++ b/package.json
@@ -9,17 +9,28 @@
             "url": "https://raw.githubusercontent.com/alisonaquinas/node-safe-utf7/main/LICENSE.txt"
         }
     ],
-    "repository": { "type": "git", "url": "https://github.com/alisonaquinas/node-safe-utf7" },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/alisonaquinas/node-safe-utf7"
+    },
     "main": "./utf7",
     "dependencies": {
         "semver": "^5.7.2"
     },
     "devDependencies": {
-        "tape": "~4.6.0"
+        "tape": "~4.6.0",
+        "tap-xunit": "^2.4.1"
     },
     "scripts": {
-        "test": "tape test/*.js"
+        "test": "tape test/*.js | tap-xunit > test-results.xml"
     },
-    "engines": { "node": ">=10.0.0" },
-    "keywords": [ "imap", "mail", "utf7", "rfc2152"]
+    "engines": {
+        "node": ">=10.0.0"
+    },
+    "keywords": [
+        "imap",
+        "mail",
+        "utf7",
+        "rfc2152"
+    ]
 }
