--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "utf7",
+    "name": "safe-utf7",
     "version": "1.0.3",
     "description": "Converts text to and from UTF-7 (RFC 2152 and IMAP)",
     "author": "Konstantin Käfer <kkaefer@gmail.com>,  Alison Aquinas <alison@aquinas.pro>",
